fix align-again

--- a/styles/test-style.css
+++ b/styles/test-style.css
@@ -127,7 +127,7 @@ header h1 {
 
 #user-controls {
     position: relative;
-    left: 10vw;
+    left: calc(20vw - 200px);
     float: left;
     min-width: 20vw;
     max-width: 35vw;
@@ -138,7 +138,7 @@ header h1 {
 #computer-controls {
     position: relative;
     float: right;
-    right: 10vw;
+    right: calc(20vw - 200px);
     min-width: 20vw;
     max-width: 35vw;
     max-height: 25vh;
@@ -152,6 +152,7 @@ header h1 {
 
 .rock, .paper, .scissors {
     padding: .6em;
+    margin: .8em;
     width: 6em;
     color: white;
     background-color: rgba(0,0,0,0.5);
